@@ -107,6 +107,9 @@ New Features
     to logging which request handler handled each request.
     (Ryan McKinley via yonik)
 
+13. SOLR-86: Added standalone Java-based command-line updater.
+    (Erik Hatcher via Bertrand Delecretaz)
+
 Changes in runtime behavior
  1. Highlighting using DisMax will only pick up terms from the main 
     user query, not boost or filter queries (klaas).
